kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clojure-nyc-website
spec:
  selector:
    app: clojure-nyc-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
