kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
  name: clojure-nyc-ingress
spec:
  tls:
    - hosts:
        - clojure.nyc
        - www.clojure.nyc
      secretName: clojure-nyc-tls
  rules:
    - host: clojure.nyc
      http:
        paths:
          - backend:
              serviceName: clojure-nyc-website
              servicePort: 80
            path: /
